<resources>
    <string name="app_name" translatable="false">Tarantula</string>
    <string name="title_activity_tarantula_drawer" translatable="false">Tarantula_drawer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <!-- menu_tarantula_list -->
    <string name="action_search">검색</string>
    <string name="action_sort">정렬</string>
    <string name="action_add">저장하기</string>

    <!-- activity_detail -->
    <string name="detail_et_name">이름:</string>
    <string name="detail_et_genus" translatable="false">"Genus: "</string>
    <string name="detail_tv_recent_fed_date">최근 피딩 날짜 : </string>
    <string name="detail_tv_NA" translatable="false">N/A</string>
    <string name="detail_tv_starve_date">"굶은 기간 : "</string>
    <string name="detail_stop_fed">"피딩 중지"</string>
    <string name="detail_fed">"피딩주기 : "</string>
    <string name="detail_postpone_fed">"탈피 후 피딩 연기일 : "</string>
    <string name="detail_tv_sex">"성별 : "</string>
    <string name="detail_tv_habit">"사육 타입 : "</string>
    <string name="detail_tv_status">"상태 : "</string>
    <string name="detail_et_species" translatable="false">Species:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="action_save">저장</string>
    <string name="action_delete">삭제</string>

</resources>
