<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="5dp"
    android:orientation="vertical"
    tools:context=".controller.detail.DetailFeeding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/detail_tv_recent_fed_date" />

                <TextView
                    android:id="@+id/tv_lastFeedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/detail_tv_NA" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_tv_starve_date" />

                <TextView
                    android:id="@+id/tv_hungry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/detail_tv_NA" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/ib_feed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:background="@drawable/ic_detail_favorite_border"
                android:text="feed"
                android:textColor="@android:color/tab_indicator_text"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cb_postponeFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/detail_stop_fed"
            android:textColor="@android:color/tab_indicator_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/detail_fed" />

        <EditText
            android:id="@+id/et_feedingCycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:ems="2"
            android:gravity="center_vertical"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </LinearLayout>

</LinearLayout>